objects/ssot__ClinicalEncounterProvider__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUOMId__c</fullName>
        <label>Duration Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Encounter Provider Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerId__c</fullName>
        <label>Practitioner</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerTypeId__c</fullName>
        <label>Practitioner Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726063613_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterProvider_ClinicalEn_rel</label>
        <referenceTo>ssot__ClinicalEncounter__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterProvider_ClinicalEn_rel</relationshipLabel>
        <relationshipName>rel_1716726063613_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726065142_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterProvider_Practition_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterProvider_Practition_rel</relationshipLabel>
        <relationshipName>rel_1716726065142_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726572071_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterProvider_Practition_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterProvider_Practition_rel</relationshipLabel>
        <relationshipName>rel_1716726572071_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>